# ffmpeg-android-play

./: .gitignore  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/android/ffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  decodeMp4.cpp  ffmpeg.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/java/com/android/ffmpeg/: MainActivity.kt
app/src/main/java/com/android/ffmpeg/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/android/ffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
